OutbackDuplicatePacketRemover only removes OutbackStatusPackets